# ledge

./: .dockerignore  .gitignore  .yamllint  AUDIT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  pyrightconfig.json  rust-toolchain.toml
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/ledge-bench/: Cargo.toml
crates/ledge-bench/benches/: blake3_vs_sha1.rs
crates/ledge-bench/src/: lib.rs
crates/ledge-cluster/: Cargo.toml
crates/ledge-cluster/src/: forward.rs  gc.rs  lib.rs  net_http.rs  net_mem.rs  object_store.rs  reconfig.rs  ref_store.rs  router.rs  shard_map.rs  testkit.rs  txn.rs
crates/ledge-cluster/tests/: cluster_gc.rs  cluster_gc_metrics.rs  cluster_integration.rs  cluster_ref_store.rs  replicated_object.rs  single_shard.rs  txn_coordinator.rs  txn_metrics.rs
crates/ledge-core/: Cargo.toml
crates/ledge-core/src/: delta.rs  error.rs  hlc.rs  lib.rs  object_id.rs  ref_entry.rs  ref_name.rs  tenant.rs  traits.rs  txn_id.rs
crates/ledge-cow/: Cargo.toml
crates/ledge-cow/src/: lib.rs
crates/ledge-git/: Cargo.toml
crates/ledge-git/src/: fetch.rs  lib.rs  pack_delta.rs  pkt_line.rs  push.rs
crates/ledge-object-store/: Cargo.toml
crates/ledge-object-store/src/: disk.rs  git_pack.rs  git_pack_file.rs  graph.rs  lib.rs  pack.rs  repack.rs  s3.rs
crates/ledge-object-store/src/io/: mod.rs  tokio_backend.rs
crates/ledge-raft/: Cargo.toml
crates/ledge-raft/src/: lib.rs  log_store.rs  log_wal.rs  op.rs  state_machine.rs  type_config.rs
crates/ledge-ref-store/: Cargo.toml
crates/ledge-ref-store/src/: art.rs  atomic_commit.rs  lib.rs  slot.rs  snapshot.rs  store.rs  wal.rs
crates/ledge-ref-store/tests/: concurrent_and_recovery.rs
crates/ledge-rpc/: Cargo.toml  build.rs
crates/ledge-rpc/src/: dispatch.rs  lib.rs
crates/ledge-rpc/tests/: dispatch.rs
crates/ledge-server/: Cargo.toml
crates/ledge-server/src/: admin_routes.rs  cli.rs  cluster_routes.rs  config.rs  lfs.rs  lib.rs  main.rs  metrics.rs  object_routes.rs  routes.rs  rpc_routes.rs  ssh.rs  ssrf.rs  sync_routes.rs  tls.rs  webhook_routes.rs  workspace_routes.rs
crates/ledge-server/src/auth/: middleware.rs  mod.rs  principal.rs  store.rs
crates/ledge-server/src/quota/: mod.rs  rate.rs
crates/ledge-server/src/sync/: git_cli.rs  mod.rs
crates/ledge-server/src/webhook/: dispatch.rs  mod.rs  store.rs
crates/ledge-server/tests/: auth_matrix.rs  cluster_integration.rs  git_annotated_tag.rs  git_concurrent_push.rs  git_fetch_incremental.rs  git_lfs.rs  git_pack_clone.rs  git_push_delta.rs  git_ssh.rs  git_sync.rs  integration.rs  metrics_alerts.rs  metrics_listener.rs  quota_matrix.rs  sync_disabled.rs  tenant_matrix.rs  tls_handshake.rs  webhooks.rs  webhooks_disabled.rs  workspace_integration.rs
crates/ledge-wal/: Cargo.toml
crates/ledge-wal/src/: lib.rs
crates/ledge-workspace/: Cargo.toml
crates/ledge-workspace/src/: gc.rs  id.rs  lease.rs  lib.rs  manager.rs  quota.rs
deploy/: README.md  config.toml.sample
deploy/backup/: README.md  backup.sh  restore.sh  verify-roundtrip.sh
deploy/compose/: cluster-config.toml  docker-compose.cluster.yml  docker-compose.reconfig.yml  docker-compose.soak.yml  docker-compose.yml  reconfig-config.toml  verify-cluster-bootstrap.sh
deploy/docker/: entrypoint.sh
deploy/helm/ledge/: Chart.yaml  values.yaml
deploy/helm/ledge/files/: ledge-alerts.yml
deploy/helm/ledge/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  pdb.yaml  prometheusrule.yaml  secret.yaml  service-headless.yaml  service.yaml  servicemonitor.yaml  statefulset.yaml
deploy/monitoring/: README.md  docker-compose.monitoring.yml  prometheus.yml
deploy/monitoring/grafana/dashboards/: ledge-overview.json
deploy/monitoring/grafana/provisioning/dashboards/: dashboards.yml
deploy/monitoring/grafana/provisioning/datasources/: prometheus.yml
deploy/systemd/: ledge.service
dogfood/: README.md  clone-speed.sh  disk-parity.sh  docker-compose.yml  selfhost.sh  transport-features.sh
dogfood/results/: 2026-06-09-compressed.txt  2026-06-09-delta.txt  2026-06-09.txt  2026-06-10-delta-after.txt  2026-06-10-delta-before.txt  2026-06-10-pack-after.txt  2026-06-10-pack.json  2026-06-10-repack.json  2026-06-11-s3-dr.txt  2026-06-11-s3-tier.txt  2026-06-12-cold-clone-warm.txt  2026-06-12-disk-parity.txt  2026-06-15-transport-features.txt
dogfood/s3/: docker-compose.yml  tier.sh
formal/: CrossShardTxn.cfg  CrossShardTxn.tla  CrossShardTxn_neg.cfg  DistributedGc.cfg  DistributedGc.tla  DistributedGc_neg.cfg  GcReachability.cfg  GcReachability.tla  Makefile  README.md  RefStore.cfg  RefStore.tla  Sharding.cfg  Sharding.tla  Sharding_neg.cfg
sdk/: README.md
sdk/go/: .gitignore  README.md  client.go  client_test.go  go.mod  go.sum  ledge_go.capnp  server_test.go
sdk/go/ledgepb/: ledge_go.capnp.go
sdk/python/: README.md  pyproject.toml  pyrightconfig.json
sdk/python/ledge_sdk/: __init__.py  client.py  smoke.py
sdk/python/tests/: server.py  test_smoke.py
sdk/schema/: ledge.capnp
sdk/ts/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
sdk/ts/src/: client.ts
sdk/ts/test/: e2e.test.ts  server.ts
soak/: Dockerfile.soak  README.md  chaos.sh  longevity.sh  reconfig.sh  wan-chaos.sh
soak/results/: 2026-06-07.txt  2026-06-14-wan-chaos-skew.txt  2026-07-02-longevity.txt  reconfig-2026-06-07.txt
