[package]
name = "ledge-cluster"
version = "0.1.0"
edition = "2021"

[features]
# `testkit` is on by default so the crate's own integration tests (which live
# in a separate compilation unit and therefore do not see the lib's `test` cfg)
# can use TestCluster via `cargo test -p ledge-cluster`. Downstreams that do not
# want the harness can opt out with `default-features = false`.
default = ["testkit"]
# Exposes the in-process test harness (TestCluster) to downstream crates.
testkit = []

[dependencies]
ledge-core = { path = "../ledge-core" }
ledge-ref-store = { path = "../ledge-ref-store" }
ledge-object-store = { path = "../ledge-object-store" }
ledge-workspace = { path = "../ledge-workspace" }
ledge-raft = { path = "../ledge-raft" }
openraft = { workspace = true, features = ["serde", "storage-v2"] }
tokio = { workspace = true, features = ["sync", "rt", "macros", "time"] }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util", "macros", "rt-multi-thread"] }
