[package]
name        = "ledge-core"
description = "Shared types, traits, and errors for Ledge"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
authors.workspace     = true

[dependencies]
thiserror.workspace   = true
bytes.workspace       = true
async-trait.workspace = true
hex.workspace         = true
serde.workspace       = true

[dev-dependencies]
proptest.workspace = true
tokio              = { workspace = true, features = ["full", "test-util"] }
