[package]
name         = "ledge-cow"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }

[dependencies]
ledge-core   = { path = "../ledge-core" }
reflink-copy = { workspace = true }

[dev-dependencies]
tempfile     = { workspace = true }
