[package]
name        = "ledge-git"
description = "Git HTTP smart protocol surface over ledge-core traits"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
authors.workspace     = true

[dependencies]
ledge-core    = { path = "../ledge-core" }
bytes.workspace       = true
tokio.workspace       = true
async-trait.workspace = true
tracing.workspace     = true
thiserror.workspace   = true
gix-pack.workspace    = true
hex.workspace         = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
