[package]
name        = "ledge-git"
description = "Git HTTP smart protocol surface over ledge-core traits"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
authors.workspace     = true

[dependencies]
ledge-core         = { path = "../ledge-core" }
ledge-object-store = { path = "../ledge-object-store" }
blake3.workspace   = true
sha1.workspace     = true
bytes.workspace    = true
tokio.workspace    = true
async-trait.workspace = true
tracing.workspace  = true
metrics.workspace  = true
hex.workspace      = true
flate2.workspace   = true

[dev-dependencies]
proptest.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
blake3.workspace = true
tempfile.workspace = true
