[package]
name        = "ledge-object-store"
description = "BLAKE3-addressed content-addressable object store"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
authors.workspace     = true

[dependencies]
ledge-core    = { path = "../ledge-core" }
blake3.workspace      = true
flate2.workspace      = true
sha1.workspace        = true
bytes.workspace       = true
tokio.workspace       = true
async-trait.workspace = true
serde.workspace       = true
rand.workspace        = true
arc-swap              = { workspace = true }
tracing.workspace     = true
hex.workspace         = true
thiserror.workspace   = true
object_store = { version = "0.11", features = ["aws"] }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7"

[dev-dependencies]
tempfile.workspace = true
tokio              = { workspace = true, features = ["full", "test-util"] }
proptest.workspace = true
futures.workspace  = true
