[package]
name = "ledge-raft"
version = "0.1.0"
edition = "2021"

[dependencies]
ledge-core = { path = "../ledge-core" }
ledge-wal = { path = "../ledge-wal" }
ledge-ref-store = { path = "../ledge-ref-store" }
ledge-workspace = { path = "../ledge-workspace" }
openraft = { workspace = true, features = ["serde", "storage-v2"] }
arc-swap = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "macros", "time"] }
serde = { workspace = true, features = ["derive"] }
bincode = { workspace = true }
crc32fast = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util", "time"] }
