[package]
name        = "ledge-ref-store"
description = "Lock-free ART ref store with HLC-stamped entries and WAL"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
authors.workspace     = true

[dependencies]
ledge-core    = { path = "../ledge-core" }
arc-swap.workspace    = true
bincode.workspace     = true
serde.workspace       = true
bytes.workspace       = true
tokio.workspace       = true
async-trait.workspace = true
tracing.workspace     = true
thiserror.workspace   = true
crc32fast.workspace   = true

[dev-dependencies]
tempfile.workspace = true
tokio              = { workspace = true, features = ["full", "test-util"] }
proptest.workspace = true
