[package]
name        = "ledge-server"
description = "Axum server assembly: Git HTTP + metrics + config"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
authors.workspace     = true

[lib]
name = "ledge_server"
path = "src/lib.rs"

[[bin]]
name = "ledge"
path = "src/main.rs"

[dependencies]
ledge-core         = { path = "../ledge-core" }
ledge-object-store = { path = "../ledge-object-store" }
ledge-ref-store    = { path = "../ledge-ref-store" }
ledge-git          = { path = "../ledge-git" }
axum.workspace              = true
tower.workspace             = true
tower-http.workspace        = true
tokio.workspace             = true
bytes.workspace             = true
tracing.workspace           = true
tracing-subscriber.workspace = true
metrics.workspace           = true
metrics-exporter-prometheus.workspace = true
clap.workspace              = true
config.workspace            = true
serde.workspace             = true
serde_json.workspace        = true
thiserror.workspace         = true
anyhow.workspace            = true

[dev-dependencies]
tokio    = { workspace = true, features = ["full", "test-util"] }
tempfile.workspace = true
reqwest  = { version = "0.12", features = ["json"] }
