[package]
name        = "ledge-server"
description = "Axum server assembly: Git HTTP + metrics + config"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
authors.workspace     = true

[lib]
name = "ledge_server"
path = "src/lib.rs"

[[bin]]
name = "ledge"
path = "src/main.rs"

[dependencies]
ledge-core         = { path = "../ledge-core" }
ledge-object-store = { path = "../ledge-object-store" }
ledge-ref-store    = { path = "../ledge-ref-store" }
ledge-git          = { path = "../ledge-git" }
ledge-workspace    = { path = "../ledge-workspace" }
ledge-cow          = { path = "../ledge-cow" }
ledge-rpc          = { path = "../ledge-rpc" }
ledge-cluster      = { path = "../ledge-cluster" }
ledge-raft         = { path = "../ledge-raft" }
openraft.workspace          = true
reqwest                     = { workspace = true, features = ["json"] }
bincode.workspace           = true
axum.workspace              = true
tower.workspace             = true
tower-http.workspace        = true
tokio.workspace             = true
bytes.workspace             = true
tempfile.workspace          = true
tracing.workspace           = true
tracing-subscriber.workspace = true
metrics.workspace           = true
metrics-exporter-prometheus.workspace = true
clap.workspace              = true
config.workspace            = true
serde.workspace             = true
serde_json.workspace        = true
thiserror.workspace         = true
anyhow.workspace            = true
blake3.workspace            = true
flate2.workspace            = true
rand.workspace              = true
crc32fast.workspace         = true
base64                      = "0.22"
subtle                      = "2"
axum-server    = { workspace = true }
rustls         = { workspace = true }
rustls-pemfile = { workspace = true }

[dev-dependencies]
tokio    = { workspace = true, features = ["full", "test-util"] }
reqwest  = { version = "0.12", features = ["json"] }
capnp.workspace = true
sha1.workspace = true
metrics-util = "0.19"
rcgen = { workspace = true }
