[package]
name         = "ledge-wal"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
description  = "Shared crash-safe write-ahead-log primitives (frame codec, fail-loud replay, crash-atomic compaction) for the ledge stores."

[dependencies]
serde     = { workspace = true }
bincode   = { workspace = true }
crc32fast = { workspace = true }

[dev-dependencies]
tempfile  = { workspace = true }
