[package]
name        = "ledge-workspace"
description = "Ephemeral workspace lifecycle: leases, manager, GC over the Phase 1 ref + object stores"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true

[dependencies]
ledge-core         = { path = "../ledge-core" }
ledge-wal          = { path = "../ledge-wal" }
ledge-object-store = { path = "../ledge-object-store" }
ledge-ref-store    = { path = "../ledge-ref-store" }
arc-swap.workspace = true
tokio.workspace       = true
bytes.workspace       = true
serde.workspace       = true
bincode.workspace    = true
crc32fast.workspace   = true
tracing.workspace     = true
thiserror.workspace   = true
async-trait.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio              = { workspace = true, features = ["full", "test-util"] }
proptest.workspace = true
serde_json.workspace = true
